refactor: make King castling logic color-agnostic
Add Color.homeRow() and compute castle positions from it in the King
constructor, removing all hard-coded positions (e1/e8/g1/g8/c1/c8)
and color-specific branching.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>