@@ -8,29 +8,34 @@ import fr.kubys.core.Row;
 import java.util.Collections;
 import java.util.Set;
 
-import static fr.kubys.core.Position.*;
-
 public class King extends Piece implements Castlable {
 
     private boolean canCastle = true;
 
+    private final Position startingPosition;
+    private final Position kingSideCastleTarget;
+    private final Position queenSideCastleTarget;
+    private final Position kingSideRookPass;
+    private final Position queenSideRookPass;
+
     public King(Color color) {
         super(color);
+        Row homeRow = color.homeRow();
+        startingPosition = Position.posToSquare(File.E, homeRow);
+        kingSideCastleTarget = Position.posToSquare(File.G, homeRow);
+        queenSideCastleTarget = Position.posToSquare(File.C, homeRow);
+        kingSideRookPass = Position.posToSquare(File.F, homeRow);
+        queenSideRookPass = Position.posToSquare(File.D, homeRow);
     }
 
-    //Penser à intégrer le rock !
     @Override
     public boolean isPositionTheoreticallyReachable(File file, Row row, Color color) {
         if (getFile() == file && getRow() == row) return false;
 
-        boolean whiteCastle = this.getPosition().equals(e1) && this.color == Color.WHITE;
-        boolean blackCastle = this.getPosition().equals(e8) && this.color == Color.BLACK;
-        boolean whiteKingSideCastle = whiteCastle && Position.posToSquare(file, row).equals(g1);
-        boolean whiteQueenSideCastle = whiteCastle && Position.posToSquare(file, row).equals(c1);
-        boolean blackKingSideCastle = blackCastle && Position.posToSquare(file, row).equals(g8);
-        boolean blackQueenSideCastle = blackCastle && Position.posToSquare(file, row).equals(c8);
-        boolean canCastle = this.canCastle() && (whiteKingSideCastle || whiteQueenSideCastle || blackKingSideCastle || blackQueenSideCastle) && color == null;
-        if (canCastle) return true;
+        if (this.canCastle() && color == null && this.getPosition().equals(startingPosition)) {
+            Position target = Position.posToSquare(file, row);
+            if (target.equals(kingSideCastleTarget) || target.equals(queenSideCastleTarget)) return true;
+        }
 
         return (getFile().distanceTo(file) <= 1) && (getRow().distanceTo(row) <= 1);
     }
@@ -39,18 +44,11 @@ public class King extends Piece implements Castlable {
     public Set<Position> squaresOnThePath(Position squareToMoveOn) {
         if (!super.isPositionTheoreticallyReachable(squareToMoveOn)) return Collections.emptySet();
 
-        boolean whiteCastle = this.getPosition().equals(e1) && this.color == Color.WHITE;
-        boolean blackCastle = this.getPosition().equals(e8) && this.color == Color.BLACK;
-        boolean whiteKingSideCastle = whiteCastle && squareToMoveOn.equals(g1);
-        boolean whiteQueenSideCastle = whiteCastle && squareToMoveOn.equals(c1);
-        boolean blackKingSideCastle = blackCastle && squareToMoveOn.equals(g8);
-        boolean blackQueenSideCastle = blackCastle && squareToMoveOn.equals(c8);
-
-        if (whiteKingSideCastle) return Set.of(f1);
-        else if (whiteQueenSideCastle) return Set.of(d1);
-        else if (blackKingSideCastle) return Set.of(f8);
-        else if (blackQueenSideCastle) return Set.of(d8);
-        else return Collections.emptySet();
+        if (this.getPosition().equals(startingPosition)) {
+            if (squareToMoveOn.equals(kingSideCastleTarget)) return Set.of(kingSideRookPass);
+            if (squareToMoveOn.equals(queenSideCastleTarget)) return Set.of(queenSideRookPass);
+        }
+        return Collections.emptySet();
     }
 
     @Override
